# powerset_calibration

./: README.md  pyproject.toml
.github/workflows/: main.yml
notebooks/: 1_model_inference.ipynb  2_active_learning_protocol.ipynb  3_advanced_use.ipynb  A1_model_inference.ipynb  B1_subset_one_file.ipynb  README.md
src/powerset_calibration/: __init__.py  evaluation.py  inference.py  protocol.py  region_selector.py
src/powerset_calibration/pipelines/: soft_segmentation.py
src/powerset_calibration/utils/: inference.py  permutation.py  pyannote_core.py  torch.py
